--- a/.github/python-test.yml
+++ b/.github/python-test.yml
@@ -1,35 +1,38 @@
 # .github/workflows/python-test.yml
-name: Run Python Tests on Multiple OS
 
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+# will add this step after sometime
 
-jobs:
-  test:
-    runs-on: ${{ matrix.os }}
+# name: Run Python Tests on Multiple OS
 
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: [3.10]
+# on:
+#   push:
+#     branches: [main]
+#   pull_request:
+#     branches: [main]
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+# jobs:
+#   test:
+#     runs-on: ${{ matrix.os }}
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
+#     strategy:
+#       matrix:
+#         os: [ubuntu-latest, windows-latest, macos-latest]
+#         python-version: [3.10]
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
 
-      - name: Run tests
-        run: |
-          pytest
+#       - name: Set up Python
+#         uses: actions/setup-python@v5
+#         with:
+#           python-version: ${{ matrix.python-version }}
+
+#       - name: Install dependencies
+#         run: |
+#           python -m pip install --upgrade pip
+#           pip install -r requirements.txt
+
+#       - name: Run tests
+#         run: |
+#           pytest
